[gd_scene load_steps=4 format=3 uid="uid://dmw3835hy5qo3"]

[ext_resource type="Script" path="res://scenes/level/game_over_screen.gd" id="1_wt2ng"]
[ext_resource type="FontFile" uid="uid://djc2dmi8tli7h" path="res://resources/Kenney Pixel Square.ttf" id="2_xxrfk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n6flq"]
size = Vector2(1920, 1080)

[node name="GameOverScreen" type="CanvasLayer"]
layer = 0
script = ExtResource("1_wt2ng")
flash_duration = 0.65

[node name="Bg" type="ColorRect" parent="."]
offset_left = -280.0
offset_top = -200.0
offset_right = 1512.0
offset_bottom = 888.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="GameOverText" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -201.5
offset_right = 180.0
offset_bottom = -102.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_xxrfk")
theme_override_font_sizes/font_size = 72
text = "YOU DIED!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelInfo" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -86.0
offset_right = 180.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_xxrfk")
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoinText" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -30.0
offset_right = 180.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.916077, 0.0234375, 1)
theme_override_fonts/font = ExtResource("2_xxrfk")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="MysteryText" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.0
offset_top = 78.0
offset_right = 215.0
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_xxrfk")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="RetryText" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -255.5
offset_top = 195.0
offset_right = 255.5
offset_bottom = 254.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_xxrfk")
theme_override_font_sizes/font_size = 34
text = "PRESS SPACE TO CONTINUE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RetryBtn" type="TouchScreenButton" parent="."]
position = Vector2(616, 344)
shape = SubResource("RectangleShape2D_n6flq")
shape_centered = false
passby_press = true
action = "Show_Radar"
visibility_mode = 1
metadata/_edit_lock_ = true
